2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Fix a typo in previous commit.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't add -Wl,-N on Apple platform.

	* configure.ac (TARGET_LDFLAGS_OLDMAGIC): New subst.
	* conf/Makefile.common: Use TARGET_LDFLAGS_OLDMAGIC instead of -Wl,-N

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (lzma_decompress): Use
	TARGET_IMG_BASE_LDOPT rather than hardcoding -Wl,-Ttext.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmod.sh.in: Rewrite the Apple part.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/machoXX.c (grub_macho_load): Fix signed vs unsigned
	comparison.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* acinclude.m4 (grub_CHECK_PIC): New test.
	* configure.ac: Add -fno-PIC to TARGET_CFLAGS if -fPIC is default.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/libgcc.h (__STDC_VERSION__): Define if it's not yet so
	to avoid the warning.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/diskboot.S (firstlist): Rename to ...
	(LOCAL(firstlist)): ... this. Move it before the firstlist and not
	after. All users updated.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Use the common size routine in hostfs so we can read disks as well.

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_sectors): Rename to ..
	(grub_util_get_fd_size): ... this. Return size in bytes.
	All users updated.
	* grub-core/kern/emu/hostfs.c (grub_hostfs_open): Use
	grub_util_get_fd_size.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_sectors) [__APPLE__]:
	Add blocksize retrieval.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Restore CFLAGS after efiemu check.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
